gramatica_correta.txt
PROGRAM ::= program id begin PROGRAM_DECL end

PROGRAM_DECL ::= DECL PROGRAM_DECL'
PROGRAM_DECL ::= ''
PROGRAM_DECL' ::= ; DECL PROGRAM_DECL'
PROGRAM_DECL' ::= ''

DECL ::= VAR_DECL
DECL ::= PROC_DECL
DECL ::= REC_DECL
DECL ::= ENUM_DECL

VAR_DECL ::= var id VAR_DECL'

VAR_DECL' ::= := EXP
VAR_DECL' ::= : TYPE VAR_EXP_DECL
VAR_EXP_DECL ::= := EXP
VAR_EXP_DECL ::= ''

PROC_DECL ::= procedure id ( PROC_PARAMFIELD_DECL ) PROC_TYPE_DECL begin PROC_DECL_DECL STMT_LIST end

PROC_PARAMFIELD_DECL ::= PARAMFIELD_DECL PROC_PARAMFIELD_DECL'
PROC_PARAMFIELD_DECL ::= ''
PROC_PARAMFIELD_DECL' ::= , PARAMFIELD_DECL PROC_PARAMFIELD_DECL'
PROC_PARAMFIELD_DECL' ::= ''

PROC_TYPE_DECL ::= : TYPE
PROC_TYPE_DECL ::= ''

PROC_DECL_DECL ::= PROGRAM_DECL in
PROC_DECL_DECL ::= ''

REC_DECL ::= struct id { REC_PARAMFIELD_DECL }

REC_PARAMFIELD_DECL ::= PARAMFIELD_DECL REC_PARAMFIELD_DECL'
REC_PARAMFIELD_DECL ::= ''
REC_PARAMFIELD_DECL' ::= ; PARAMFIELD_DECL REC_PARAMFIELD_DECL'
REC_PARAMFIELD_DECL' ::= ''

ENUM_DECL ::= enum id = { id ENUM_DECL' } of TYPE
ENUM_DECL' ::= , id ENUM_DECL'
ENUM_DECL' ::= ''

PARAMFIELD_DECL ::= id : TYPE

STMT_LIST ::= STMT STMT_LIST'
STMT_LIST ::= ''
STMT_LIST' ::= ; STMT STMT_LIST' 
STMT_LIST' ::= ''

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= NOT_OP AND_OP'
AND_OP' ::= && NOT_OP AND_OP'
AND_OP' ::= ''
NOT_OP ::= NOT_OP' EXP_REL
NOT_OP' ::= not NOT_OP'
NOT_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= VAR POW'
POW' ::= ^ POW
POW' ::= ''
VAR ::= FACT VAR'
VAR' ::= . id VAR'
VAR' ::= ''
FACT ::= ( EXP )
FACT ::= id CALL_STMT
FACT ::= REF_VAR
FACT ::= DEREF_VAR
FACT ::= LITERAL
FACT ::= new id

CALL_STMT ::= ( CALL_ARGS )
CALL_STMT ::= ''
CALL_ARGS ::= EXP CALL_ARGS'
CALL_ARGS ::= ''
CALL_ARGS' ::= , EXP CALL_ARGS'
CALL_ARGS' ::= ''

REF_VAR ::= ref ( VAR2 )
DEREF_VAR ::= deref ( DEREF_VAR' )
DEREF_VAR' ::= VAR2

LITERAL ::= FLOAT_LITERAL
LITERAL ::= INT_LITERAL
LITERAL ::= STRING_LITERAL
LITERAL ::= BOOL_LITERAL
LITERAL ::= null
BOOL_LITERAL ::= true 
BOOL_LITERAL ::= false

REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>

VAR2 ::= id VAR2'
VAR2 ::= EXP2 . id VAR2_'
VAR2' ::= EXP3 . id VAR2_'
VAR2' ::= VAR2_'
VAR2_' ::= . id VAR2_'
VAR2_' ::= ''

EXP2 ::= not NOT_OP4
EXP2 ::= FACT2 EXP3
FACT2 ::= ( EXP )
FACT2 ::= REF_VAR
FACT2 ::= DEREF_VAR
FACT2 ::= LITERAL
FACT2 ::= new id

EXP3 ::= OR_OP3
OR_OP3 ::= || AND_OP4 OR_OP4'
OR_OP3 ::= AND_OP3
AND_OP3 ::= && NOT_OP4 AND_OP4'
AND_OP3 ::= EXP_REL3
EXP_REL3 ::= REL_OP EXP_ARITH4
EXP_REL3 ::= EXP_ARITH3
EXP_ARITH3 ::= + TERM4 EXP_ARITH4'
EXP_ARITH3 ::= - TERM4 EXP_ARITH4'
EXP_ARITH3 ::= TERM3
TERM3 ::= / POW4 TERM4'
TERM3 ::= * POW4 TERM4'
TERM3 ::= POW3
POW3 ::= ^ FACT3 POW4'
FACT3 ::= ( EXP )
FACT3 ::= id CALL_STMT
FACT3 ::= REF_VAR
FACT3 ::= DEREF_VAR
FACT3 ::= LITERAL
FACT3 ::= new id

EXP4 ::= AND_OP4 OR_OP4'
OR_OP4' ::= || AND_OP4 OR_OP4'
OR_OP4' ::= ''
AND_OP4 ::= NOT_OP4 AND_OP4'
AND_OP4' ::= && NOT_OP4 AND_OP4'
AND_OP4' ::= ''
NOT_OP4 ::= NOT_OP4' EXP_REL4
NOT_OP4' ::= not NOT_OP4'
NOT_OP4' ::= ''
EXP_REL4 ::= EXP_ARITH4 EXP_REL4'
EXP_REL4' ::= REL_OP EXP_ARITH4 
EXP_REL4' ::= ''
EXP_ARITH4 ::= TERM4 EXP_ARITH4'
EXP_ARITH4' ::= + TERM4 EXP_ARITH4'
EXP_ARITH4' ::= - TERM4 EXP_ARITH4'
EXP_ARITH4' ::= ''
TERM4 ::= POW4 TERM4'
TERM4' ::= * POW4 TERM4'
TERM4' ::= / POW4 TERM4'
TERM4' ::= ''
POW4 ::= FACT4 POW4'
POW4' ::= ^ POW4
POW4' ::= ''
FACT4 ::= ( EXP )
FACT4 ::= id CALL_STMT
FACT4 ::= REF_VAR
FACT4 ::= DEREF_VAR
FACT4 ::= LITERAL
FACT4 ::= new id

STMT ::= id STMT' 
STMT ::= EXP5 . id VAR2_' ASSIGN_STMT
STMT ::= DEREF_VAR STMT_DEREF' ASSIGN_STMT
STMT ::= IF_STMT
STMT ::= WHILE_STMT
STMT ::= RETURN_STMT

STMT' ::= ( CALL_ARGS ) 
STMT' ::= VAR2' ASSIGN_STMT
STMT_DEREF' ::= ''
STMT_DEREF' ::= EXP3 . id VAR2_'

ASSIGN_STMT ::= := EXP

EXP5 ::= not NOT_OP4
EXP5 ::= FACT5 EXP3
FACT5 ::= ( EXP )
FACT5 ::= REF_VAR
FACT5 ::= LITERAL
FACT5 ::= new id

IF_STMT ::= if EXP then STMT_LIST ELSE_STMT fi
ELSE_STMT ::= else STMT_LIST
ELSE_STMT ::= ''

WHILE_STMT ::= while EXP do STMT_LIST od

RETURN_STMT ::= return ( EXP )

TYPE ::= float
TYPE ::= int
TYPE ::= string
TYPE ::= bool
TYPE ::= id
TYPE ::= ref ( TYPE )
